[gd_scene load_steps=7 format=2]

[ext_resource path="res://spriteframes/note_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/note/Note.gd" type="Script" id=2]
[ext_resource path="res://scenes/note/sprites/star.png" type="Texture" id=3]
[ext_resource path="res://fonts/HeartbitXX.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[node name="Note" type="Area2D" groups=[
"note",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.5, 4.5 )
frames = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 0.8
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
gravity = Vector2( 0, -10 )
initial_velocity = 400.0
linear_accel = -100.0
scale_amount = 5.0

[node name="EmittingTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AccuracyLabel" type="Label" parent="."]
margin_left = -50.0
margin_top = -25.0
margin_right = 63.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="EmittingTimer" to="." method="_on_EmittingTimer_timeout"]
